--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,258 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr min-content 1fr;
+  font-family: 'IBM Plex mono', sans-serif;
+  font-size: 18px;
+  background-image: var(--bg-image, url(../images/cover-image-dark.png));
+  background-color: var(--bg-color, #000028);
+  background-size: cover;
+  background-position-x: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
+
+h2,
+h3,
+h4 {
+  font-size: inherit;
+}
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr min-content 1fr;
+  block-size: 100vh;
+  padding: var(--page-padding, 10px);
+}
+
+.decorated-zone {
+  /* position: relative; */
+}
+
+.decorated-zone:before {
+  content: "";
+  position: absolute;
+  grid-row: 1 / 2;
+  inline-size: 25px;
+  block-size: 25px;
+  justify-self: end;
+  /* inset-inline-end: 1em; */
+  border-inline-end: 1px solid var(--accent-color, #FF0070);
+  border-block-start: 1px solid var(--accent-color, #FF0070);
+}
+
+.decorated-zone::after {
+  content: "";
+  /* position: absolute; */
+  inline-size: 25px;
+  block-size: 25px;
+  align-self: end;
+  border-inline-start: 1px solid var(--accent-color, #FF0070);
+  border-block-end: 1px solid var(--accent-color, #FF0070);
+}
+
+.header__decor-corner {
+  display: inline-block;
+  position: absolute;
+  grid-row: 1 / 2;
+  justify-self: end;
+  inset-inline-end: 1.5em;
+}
+
+.header__decor-corner:before {
+  content: "REC";
+  padding-inline-end: 1em;
+  color: var(--accent-color, #FF0070);
+}
+
+.header__decor-corner:after {
+  content: "";
+  display: inline-block;
+  inline-size: 9px;
+  block-size: 9px;
+  background-color: var(--accent-color, #FF0070);
+  border-radius: 100%;
+  box-shadow: 0 0 5px 3px #FF0070;
+}
+
+.header__theme-menu {
+  justify-self: end;
+  align-self: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10;
+}
+
+.header__theme-menu-button {
+  padding-block: 1.5px;
+  padding-inline: 13px;
+  appearance: none;
+  font-family: var(--main-font, sans-serif);
+  color: var(--accent-color, #FF0070);
+  background-color: transparent;
+  border: none;
+}
+
+.title-sizing {
+  /* font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem); */
+  font-size: clamp(7.25rem, 6.3477rem + 3.8498vw, 9.8125rem);
+  font-weight: 700;
+  line-height: 0.957;
+  /* line-height: 95.7px; */
+  color: var(--title-text-color, #DB00FF);
+}
+
+.text-shadow {
+  text-shadow: 4px 4px 0 var(--accent-color, #FF0070);
+}
+
+.header__heading {
+  align-self: center;
+  block-size: fit-content;
+}
+
+.title-decor {
+  color: var(--bg-color, #000028);
+  background-color: var(--accent-color, #FF0070);
+}
+
+main {
+  display: grid;
+  gap: var(--main-gap, 50px);
+  margin: var(--main-margin, 40px 0);
+  padding: 0 var(--page-padding, 10px);
+}
+
+.card__title {
+  color: var(--accent-color, #FF0070);
+  margin-block-end: 20px;
+}
+
+.card__content-subtitle {
+  margin-block-end: 10px;
+}
+
+.card__content-subtitle_bold {
+  font-weight: 700; 
+}
+
+.card__content-paragraph:not(:last-child) {
+  margin-block-end: 20px;
+}
+
+.card-pictures__gallery {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+}
+
+.gallery__item {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: var(--page-padding, 10px);
+}
+
+.footer__title {
+  justify-self: center;
+  align-self: center;
+}
+
+@media (width >= 768px) {
+
+  :root {
+    --page-padding: 20px;
+    --main-margin: 60px 0;
+    --main-gap: 80px;
+  }
+
+  .header__heading {
+    inline-size: 50%;
+    justify-self: end;
+  }
+
+  .card:nth-of-type(1) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .card:nth-of-type(3) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .card__title {
+    grid-column: 1 / auto;
+  }
+
+  .card__content {
+    grid-column: 2 / -1;
+  }
+
+  .card-pictures__gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .gallery__item:nth-child(1) {
+    grid-column: span 2;
+  }
+  
+  .gallery__item:nth-child(2) {
+    grid-row: span 2;
+  } 
+  
+  .gallery__item:nth-child(3) {
+    grid-row: span 2;
+  }
+
+  .gallery__item:nth-child(4) {
+    grid-column: span 1;
+  } 
+
+  .gallery__item:nth-child(5) {
+    grid-column: span 2; 
+  }
+
+}
+
+@media (width >= 1024px) {
+
+  .header__theme-menu {
+    grid-row: 1 / 2;
+    justify-self: center;
+    align-self: start;
+  }
+
+  .header__theme-menu-list {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .card:nth-of-type(2) .card__content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+}
+
+ /* * {
+  outline: 1px solid red;
+}  */
