--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,8 +3,9 @@
   и их переопределение под различные устройства
 */
 :root {
+  --main-font: 'IBM Plex mono', sans-serif;
   --page-padding: 10px;
-  --main-margin: 40px 0;
+  --margin-page: 40px 0;
   --main-gap: 50px;
   --text-color: #F1B2CE;
   --title-text-color: #DB00FF;
