--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr min-content 1fr;
+  gap: var(--body-gap, 40px);
   font-family: var(--main-font, sans-serif);
   font-size: 18px;
   line-height: 23.4px;
@@ -88,11 +89,7 @@ h4 {
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 10;
-}
-
-.header__theme-menu-item:not(:last-child) {
-  margin-block-end: 10px;
+  gap: 10px;
 }
 
 .header__theme-menu-button {
@@ -135,7 +132,7 @@ h4 {
 main {
   display: grid;
   gap: var(--main-gap, 50px);
-  margin: var(--margin-page, 40px);
+  /* margin: var(--body-gap, 40px); */
   padding: 0 var(--page-padding, 10px);
 }
 
@@ -192,7 +189,7 @@ main {
 
   :root {
     --page-padding: 20px;
-    --margin-page: 60px 0;
+    --body-gap: 60px 0;
     --main-gap: 80px;
   }
 
@@ -279,12 +276,8 @@ main {
   }
 
   .header__theme-menu-list {
-    display: flex;
     flex-direction: row;
-  }
-
-  .header__theme-menu-item:not(:last-child) {
-    margin-block-end: 0;
+    gap: 10px;
   }
 
   .card:nth-of-type(2) .card__content {
@@ -295,6 +288,6 @@ main {
 
 }
 
- /* * {
+ * {
   outline: 1px solid red;
-}  */
+} 
