--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,21 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --text-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --bigest-title-color: #DB00FF;
+  --title-color: #FF0070;
+  --subtitle-color: #000028;
+  --menu-color: rgb(255, 0, 112);
+  --menu-hover-color: rgb(255, 0, 112, 0.4);
+  --decorated-zone-color: #FF0070;
+  --bg-color: #000028;
+  --bg-image: url(../images/cover-image-dark.png);
 }
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  .header__decor-corner {
+    display: inline;
+  }
 }
