--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,41 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --text-color: #353430;
+  --accent-color: #FF8DCB;
+  --bigest-title-color: #FFC2E6;
+  --title-color: #353430;
+  --subtitle-color: #353430;
+  --menu-color: #353430;
+  --menu-hover-color: rgb(53, 52, 48, 0.4);
+  --decorated-zone-color: #353430;
+  --bg-color: #FFF1F7;
+  --bg-image: url(../images/cover-image-light.png);
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  .header__decor-corner {
+    display: none;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --text-color: #353430;
+  --accent-color: #FF8DCB;
+  --bigest-title-color: #FFC2E6;
+  --title-color: #353430;
+  --subtitle-color: #353430;
+  --menu-color: #353430;
+  --menu-hover-color: rgb(53, 52, 48, 0.4);
+  --decorated-zone-color: #353430;
+  --bg-color: #FFF1F7;
+  --bg-image: url(../images/cover-image-light.png);   
+  }
+
+  .header__decor-corner {
+    display: none;
+  }
+
 }
