--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,7 @@
 .page {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 100dvb min-content 100dvb;
-  gap: var(--body-gap, 40px);
+  grid-template-rows: 1fr min-content 1fr;
   font-family: var(--main-font, sans-serif);
   font-size: 18px;
   line-height: 23.4px;
@@ -27,6 +26,7 @@ h4 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr min-content 1fr;
+  block-size: max(668px, 100dvb);
   padding: var(--page-padding, 10px);
 }
 
@@ -156,32 +156,34 @@ a.text-shadow:hover {
 
 main {
   display: grid;
+  margin-block: var(--main-margin-block);
   gap: var(--main-gap, 50px);
   padding: 0 var(--page-padding, 10px);
 }
 
-.card__title {
+.section__title {
   color: var(--title-color, #ff0070);
   margin-block-end: 20px;
 }
 
-.card__content-margin-bl-st {
-  margin-block-start: 20px;
-}
-
-.card__content-subtitle {
+.article-card__title {
   margin-block-end: 10px;
 }
 
-.card:nth-of-type(3) .title-decor:not(:first-of-type) {
+.how .title-decor {
   font-weight: 400;
 }
 
-.card__content-paragraph:not(:last-child) {
+.how .article-card:first-of-type .title-decor:first-of-type {
+  margin-block-end: 20px;
+  font-weight: 700;
+}
+
+.article-card:not(:last-child) .article-card__paragraph {
   margin-block-end: 20px;
 }
 
-.card-pictures__gallery {
+.gallery {
   display: grid;
   grid-template-columns: 1fr;
   gap: 10px;
@@ -208,7 +210,7 @@ main {
 @media (width >= 768px) {
   :root {
     --page-padding: 20px;
-    --body-gap: 60px 0;
+    --main-margin-block: 60px;
     --main-gap: 80px;
   }
 
@@ -227,59 +229,41 @@ main {
     justify-self: end;
   }
 
-  .card:nth-of-type(1) {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-  }
-
-  .card:nth-of-type(2) {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .card:nth-of-type(2) .card__title {
-    columns: 1 / 2;
-  }
-
-  .card:nth-of-type(3) {
+  .section {
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 20px;
   }
 
-  .card__title {
+  .section__title {
     grid-column: 1 / 2;
   }
 
-  .card__content {
+  .article-list {
     grid-column: 2 / -1;
   }
 
-  .card:nth-of-type(2) .card__content {
+  .what .section__title {
+    grid-column: 1 / 2;
+    margin-block-end: 0;
+  }
+
+  .what .article-list {
     grid-column: 1 / -1;
   }
 
-  .card:nth-of-type(2) .card__title {
-    margin-block-end: 0px;
-  }
-
-  .card-pictures .card__content-subtitle {
-    margin-block-end: 20px;
-  }
-
-  .card-pictures__gallery {
+  .gallery {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
   }
 
   .gallery__item:nth-child(1) {
-    grid-column: span 2;
+    grid-column: span 3;
   }
 
   .gallery__item:nth-child(2) {
-    grid-row: span 2;
+    grid-column: span 2;
   }
 
   .gallery__item:nth-child(3) {
@@ -287,10 +271,14 @@ main {
   }
 
   .gallery__item:nth-child(4) {
-    grid-column: span 1;
+    grid-row: span 2;
   }
 
   .gallery__item:nth-child(5) {
+    grid-column: span 1;
+  }
+
+  .gallery__item:nth-child(6) {
     grid-column: span 2;
   }
 }
@@ -309,11 +297,10 @@ main {
 
   .title-sizing {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    line-height: 99px;
     line-height: 129.53px;
   }
 
-  .card:nth-of-type(2) .card__content {
+  .what .article-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
