--- a/styles/style.css
+++ b/styles/style.css
@@ -174,7 +174,7 @@ main {
   font-weight: 400;
 }
 
-.how .article-card:first-of-type .title-decor:first-of-type {
+.how .article-list > .title-decor {
   margin-block-end: 20px;
   font-weight: 700;
 }
