--- a/styles/dark.css
+++ b/styles/dark.css
@@ -24,6 +24,6 @@
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
   .header__decor-corner {
-    display: inline;
+    display: block;
   }
 }
