--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   grid-template-rows: 1fr min-content 1fr;
   font-family: var(--main-font, sans-serif);
   font-size: 18px;
-  line-height: 23.4px;
+  line-height: 1.3;
   color: var(--text-color, #f1b2ce);
   background-image: var(--bg-image, url(../images/cover-image-dark.png));
   background-color: var(--bg-color, #000028);
@@ -26,7 +26,7 @@ h4 {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr min-content 1fr;
-  block-size: max(668px, 100dvb);
+  block-size: 100dvb;
   padding: var(--page-padding, 10px);
 }
 
@@ -96,19 +96,32 @@ h4 {
 }
 
 .header__theme-menu-button {
+  position: relative;
   appearance: none;
-  padding-block: 1.5px;
+  padding-block-start: 1.5px;
+  padding-block-end: 4px;
   padding-inline: 13px;
   font-family: var(--main-font, sans-serif);
-  line-height: 18px;
+  line-height: 1;
+  text-transform: lowercase;
   color: var(--menu-color, #ff0070);
   background-color: transparent;
+  cursor: pointer;
   border: none;
 }
 
-.header__theme-menu-button:focus-visible {
+.header__theme-menu-button:focus {
   outline: none;
-  border-block-end: 1px solid var(--menu-color, #ff0070);
+}
+
+.header__theme-menu-button:focus-visible::after {
+  content: "";
+  position: absolute;
+  inline-size: 100%;
+  block-size: 1px;
+  background-color: var(--menu-color, #ff0070);
+  inset-block-end: -2px;
+  inset-inline-start: 0;
 }
 
 .header__theme-menu-button:hover {
@@ -131,6 +144,10 @@ h4 {
 
 .text-shadow {
   text-shadow: 4px 4px 0 var(--accent-color, #ff0070);
+}
+
+a.text-shadow:focus {
+  outline: none;
 }
 
 a.text-shadow:focus-visible {
@@ -204,7 +221,7 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   padding: var(--page-padding, 10px);
-  block-size: max(668px, 100dvb);
+  block-size: 100dvb;
 }
 
 .footer__title {
