--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,7 +3,7 @@
   и их переопределение под различные устройства
 */
 :root {
-  --main-font: 'IBM Plex mono', sans-serif;
+  --main-font: 'IBM Plex mono', monospace;
   --page-padding: 10px;
   --main-margin-block: 40px;
   --main-gap: 50px;
